2010-03-19 Borut Razem <borut.razem AT siol.net>

	* configure.in, configure, device/lib/z80/Makefile.in,
	  device/lib/gbz80/Makefile.in, device/lib/ds390/Makefile.in,
	  device/lib/Makefile.in, device/lib/ds400/Makefile.in,
	  device/lib/mcs51/Makefile.in, device/lib/hc08/Makefile.in:
	  autoconf test if ar accepts -S (GNU ar does, BSD ar does not)
	* src/pic/ralloc.c: Solaris SunPro C compiler doesn't like (void)0

2010-03-18 Borut Razem <borut.razem AT siol.net>

	* sim/ucsim/ddconfig_in.h:
	  fixed endianness detection, so that it works on Solaris

2010-03-17 Borut Razem <borut.razem AT siol.net>

	* configure.in, configure, debugger/mcs51/configure.in,
	  debugger/mcs51/configure, sim/ucsim/configure.in,
	  sim/ucsim/configure, sim/ucsim/aclocal.m4, src/SDCCutil.c:
	  preparations for *BSD and Solaris ports
	* configure, debugger/mcs51/configure, debugger/mcs51/configure.in,
	  configure.in, sim/ucsim/configure, sim/ucsim/cmd.src/Makefile.in,
	  sim/ucsim/xa.src/Makefile.in, sim/ucsim/z80.src/Makefile.in,
	  sim/ucsim/gui.src/Makefile.in,
	  sim/ucsim/gui.src/serio.src/Makefile.in,
	  sim/ucsim/gui.src/obsolete/portmon.src/Makefile.in,
	  sim/ucsim/sim.src/Makefile.in, sim/ucsim/configure.in,
	  sim/ucsim/hc08.src/Makefile.in, sim/ucsim/s51.src/Makefile.in,
	  sim/ucsim/avr.src/Makefile.in, sdas/as8051/Makefile.in,
	  sdas/asz80/Makefile.in, sdas/linksrc/Makefile.in,
	  sim/ucsim/main_in.mk: portable -Wall
	* support/cpp/Makefile.in, support/cpp/libiberty/alloca.c:
	  added alloca.c

2010-03-15 Borut Razem <borut.razem AT siol.net>

	* device/lib/*.c: sdcc library license changed to GPL+LE

2010-03-13 Borut Razem <borut.razem AT siol.net>

	* support/scripts/sdcc.nsi: removed lib/src/z80/*.c from the package
	* src/z80/gen.c: fixed warning: suggest parentheses around assignment
	  used as truth value
	* sdas/asxxsrc/sdas.c, sdas/linksrc/sdld.c:
	  fixed warning: implicit declaration of function 'tolower'