@@ -21,6 +21,9 @@ teststrtok(void)
   ASSERT( token && 0 == strcmp (token, "x"));
   token = strtok(NULL, "ab");
   ASSERT( token == NULL);
+#ifndef __SUNPRO_C
+  /* SunPro C compiler has problem with strtok-ing after NULL */
   token = strtok(NULL, "a");
   ASSERT( token == NULL);
+#endif
 }
